--- a/workshop-sample-app/docker-compose.yml
+++ b/workshop-sample-app/docker-compose.yml
@@ -1,49 +1,30 @@
 version: "3.3"
 
 services:
-  database:
-    build:
-      context: db
-    image: ddev_db
-    deploy:
-      endpoint_mode: dnsrr
-    environment:
-      SQL_USER: gordonuser
-      SQL_DB: ddev_db
-    networks:
-      - back-tier
-    secrets:
-      - sql_password
-
   api:
     build:
       context: api
     image: ddev_api
-    deploy:
-      endpoint_mode: dnsrr
     ports:
-      - 8080:8080
+      - 5000:5000
     networks:
-      - back-tier
-      - front-tier
-    secrets:
-      - sql_password
+      - nat
+    volumes:
+      - ./devsecrets:c:/ProgramData/Docker/secrets
 
   ui:
     build:
       context: ui
     image: ddev_ui
-    deploy:
-      endpoint_mode: dnsrr
     ports:
       - 3000:3000
     networks:
-      - front-tier
+      - nat
 
 secrets:
   sql_password:
     file: ./devsecrets/sql_password
 
 networks:
-  front-tier:
-  back-tier:
+  nat:
+    external: true
