Integrated MS SQL Server into application

--- a/workshop-sample-app/docker-compose.yml
+++ b/workshop-sample-app/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.3"
 
 services:
+  db:
+    build:
+      context: db
+    image: ddev_db
+    networks:
+      - nat
+
   api:
     build:
       context: api
@@ -9,6 +16,8 @@ services:
       - 5000:5000
     networks:
       - nat
+    environment:
+      - SA_PASSWORD=1loop-back2
     volumes:
       - ./devsecrets:c:/ProgramData/Docker/secrets
 
@@ -22,8 +31,8 @@ services:
       - nat
 
 secrets:
-  sql_password:
-    file: ./devsecrets/sql_password
+  sa_password:
+    file: ./devsecrets/sa_password
 
 networks:
   nat:
