--- a/workshop-sample-app/api/api.csproj
+++ b/workshop-sample-app/api/api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="Dapper" Version="1.50.2" />
   </ItemGroup>
 
 </Project>
